# ZephIR

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: 🐛-bug-report.md  📚-questions-or-documentation.md  🚀-feature-request.md
docs/: Guide-ZephIR.md  Guide-annotatorGUI.md  Guide-data.md  Guide-parameters.md  annotatorGUI.md  examples.md
example/: demo.ipynb
example/data/: args.json  metadata.json  worldlines.h5
example/data/backup/: annotations-2.h5  annotations-g.h5  flow_file.txt  parameters.json  traces.npy
notebooks/: detect_link_ir_acc_survey.ipynb  export_to_deeplabcut.ipynb  import_from_deeplabcut.ipynb  visualize_loss.ipynb  zephir.ipynb
notebooks/.ipynb_checkpoints/: deeplabcut-checkpoint.ipynb  visualize_loss-checkpoint.ipynb  zephir-checkpoint.ipynb
zephir/: __version__.py  main.py
zephir/annotator/: main.py  test_rpc_from_socket.py
zephir/annotator/client/: package-lock.json  package.json
zephir/classifier/: checkpoint.pt  checkpoint2.pt  inference.py  model.py  streamers.py  train.py  utils.py
zephir/methods/: __init__.py  auto_annotate.py  build_annotations.py  build_models.py  build_pdists.py  build_springs.py  build_tree.py  extract_traces.py  get_optimization_trajectory.py  overwrite_checkpoint.py  plot_loss_maps.py  recommend_frames.py  save_annotations.py  save_movie.py  track_all.py  track_frame.py
zephir/models/: container.py  losses.py  zephir.py
zephir/utils/: getters.py  io.py  utils.py
zephir/zephod/: augment.py  channels.py  main.py  model.pt  model.py  train.py
(+95 files in other folders)
